Closed Bug 1255443 Opened 9 years ago Closed 9 years ago

NSS 3.23 no longer builds using NSS_NO_PKCS11_BYPASS=1

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox48 affected)

RESOLVED FIXED
Tracking Status
firefox48 --- affected

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

Attachments

(1 file)

NSS 3.23 no longer builds using NSS_NO_PKCS11_BYPASS=1 This is caused by "warnings are errors" and ssl3_CanBypassCipher. When setting the variable, the function is never used, and the compiler aborts.
Attached patch 1255443-v1.patchSplinter Review
Assignee: nobody → kaie
Attachment #8729022 - Flags: review?(ttaubert)
Comment on attachment 8729022 [details] [diff] [review] 1255443-v1.patch Review of attachment 8729022 [details] [diff] [review]: ----------------------------------------------------------------- LGTM
Attachment #8729022 - Flags: review+
Attachment #8729022 - Flags: review?(ttaubert) → review+
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: